# dora-codelens

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  ENHANCED_CATEGORIZATION_SUMMARY.md  LICENSE  PYTHON_SETUP_ENHANCEMENT_SUMMARY.md  README.md  TAB_STRUCTURE.md  TASK_2_IMPLEMENTATION_SUMMARY.md  TECH_STACK_CATEGORIZATION_SUMMARY.md  a.txt  debug-categorization.js  debug-panel-demo.html  demo-cache-usage.js  package-lock.json  package.json  package.json.bak  package.json.new  subcategory-layout-preview.html  test-code-lens.py  test-complex-conversion.js  test-database-schema-webview.js  test-fallback.js  test-git-analytics.js  test-graph-integration.js  test-guidance-implementation.py  test-guidance-system-comprehensive.py  test-guidance-system.js  test-inline-codelens.js  test-integration.js  test-json-tree.json  test-json-utilities.json  test-minimal-graph.html  test-python-dict-fix.txt  test-real-scenario.js  test-sidebar-inline-text.js  test-valid-json.json  test_current_file.py
analyzer/: analyzer.py  ast_parser.py  cache_manager.py  call_graph.py  category_rules_engine.py  classification_rules.py  complexity_analyzer.py  current_file_analyzer.py  database_schema_analyzer.py  dependency_parser.py  dora.html  dora_ref.html  folder_structure_analyzer.py  framework_classifier.py  framework_detector.py  git_analytics_runner.py  git_analytics_visualizer.py  git_analyzer.py  json_output_demo.py  json_schema.py  module_card_generator.py  module_commit_analyzer.py  performance_optimizer.py  pyproject.toml  run_database_schema_analysis.py  tech_stack_categorizer.py  (+27 more)
(+453 files in other folders)
