[tool.poetry]
name = "codemindmap-analyzer"
version = "0.1.0"
description = "Python analyzer for CodeMindMap VS Code extension"
authors = ["CodeMindMap <codemindmap@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
radon = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codemindmap-analyzer = "analyzer:main"